[project]
name = "data-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">3.12"
dependencies = [
    "matplotlib>=3.10.0",
    "numba>=0.60.0",
    "numpy>=2.0.2",
    "polars>=1.19.0",
    "pyarrow>=18.1.0",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
]
